--- a/qt_gui_cpp/src/qt_gui_cpp_sip/CMakeLists.txt
+++ b/qt_gui_cpp/src/qt_gui_cpp_sip/CMakeLists.txt
@@ -27,10 +27,44 @@ set(qt_gui_cpp_sip_DEPENDENT_FILES
 )
 
 # maintain context for different named target
-set(qt_gui_cpp_sip_INCLUDE_DIRS ${qt_gui_cpp_INCLUDE_DIRS} "${CMAKE_CURRENT_SOURCE_DIR}/../../include" ${catkin_INCLUDE_DIRS})
-set(qt_gui_cpp_sip_LIBRARIES ${qt_gui_cpp_LIBRARIES} ${PROJECT_NAME} ${catkin_LIBRARIES} ${Boost_LIBRARIES})
-set(qt_gui_cpp_sip_LIBRARY_DIRS ${qt_gui_cpp_LIBRARY_DIRS} ${CATKIN_DEVEL_PREFIX}/lib)
+set(qt_gui_cpp_sip_INCLUDE_DIRS ${qt_gui_cpp_INCLUDE_DIRS} "${CMAKE_CURRENT_SOURCE_DIR}/../../include" ${catkin_INCLUDE_DIRS}  ${TinyXML_INCLUDE_DIRS})
+set(qt_gui_cpp_sip_LIBRARIES ${qt_gui_cpp_LIBRARIES} ${PROJECT_NAME} )
+set(qt_gui_cpp_sip_LIBRARY_DIRS ${qt_gui_cpp_LIBRARY_DIRS} ${CATKIN_DEVEL_PREFIX}/lib/Release)
 set(qt_gui_cpp_sip_LDFLAGS_OTHER ${qt_gui_cpp_LDFLAGS_OTHER} -Wl,-rpath,\\"${CATKIN_DEVEL_PREFIX}/lib\\")
+
+set(append_next FALSE)
+foreach(var  ${Boost_LIBRARIES})
+  if(${var} STREQUAL "optimized")
+    set(append_next True)
+  elseif(${var} STREQUAL "debug")
+    set(append_next FALSE)
+  else()
+    if(${append_next})
+      list(APPEND qt_gui_cpp_sip_LIBRARIES ${var})
+    endif()
+  endif()
+endforeach()
+
+set(append_next True)
+foreach(var  ${catkin_LIBRARIES})
+  if(${var} STREQUAL "optimized")
+    set(append_next True)
+  elseif(${var} STREQUAL "debug")
+    set(append_next FALSE)
+  else()
+    if(${append_next})
+      if(NOT ${var} MATCHES "filesystem")
+       list(APPEND qt_gui_cpp_sip_LIBRARIES ${var})
+        message("===> ${var}")
+      endif()
+            
+    else()
+     set(append_next True)
+    endif()
+  endif()
+endforeach()
+
+list(APPEND qt_gui_cpp_sip_LIBRARIES ${TinyXML_LIBRARIES})
 
 find_package(python_qt_binding REQUIRED)
 include(${python_qt_binding_EXTRAS_DIR}/sip_helper.cmake)
@@ -48,6 +82,8 @@ if(sip_helper_FOUND)
 
   if(APPLE)
     set(LIBQT_GUI_CPP_SIP_SUFFIX .so)
+  elseif(WIN32)
+    set(LIBQT_GUI_CPP_SIP_SUFFIX .pyd)
   else()
     set(LIBQT_GUI_CPP_SIP_SUFFIX ${CMAKE_SHARED_LIBRARY_SUFFIX})
   endif()
