replace TinyXML to TinyXML2

--- a/qt_gui_cpp/CMakeLists.txt
+++ b/qt_gui_cpp/CMakeLists.txt
@@ -4,7 +4,18 @@ project(qt_gui_cpp)
 
 find_package(catkin REQUIRED COMPONENTS cmake_modules pluginlib)
 find_package(Boost REQUIRED COMPONENTS filesystem system)
-find_package(TinyXML REQUIRED)
+if(WIN32)
+  find_package(TinyXML2 REQUIRED)
+
+catkin_package(
+  INCLUDE_DIRS include
+  LIBRARIES ${PROJECT_NAME}
+  CATKIN_DEPENDS pluginlib
+  CFG_EXTRAS ${PROJECT_NAME}-extras.cmake
+  DEPENDS Boost TinyXML2
+)
+else()
+  find_package(TinyXML REQUIRED)
 
 catkin_package(
   INCLUDE_DIRS include
@@ -13,10 +24,14 @@ catkin_package(
   CFG_EXTRAS ${PROJECT_NAME}-extras.cmake
   DEPENDS Boost TinyXML
 )
+endif()
 
 catkin_python_setup()
-
+if(WIN32)
+include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${TinyXML2_INCLUDE_DIRS})
+else()
 include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${TinyXML_INCLUDE_DIRS})
+endif()
 add_subdirectory(src)
 
 install(DIRECTORY include/qt_gui_cpp/
