--- a/qt_gui_cpp/src/qt_gui_cpp/CMakeLists.txt
+++ b/qt_gui_cpp/src/qt_gui_cpp/CMakeLists.txt
@@ -49,7 +49,7 @@ install(TARGETS ${PROJECT_NAME}
 if(WIN32)
   install(TARGETS ${PROJECT_NAME}
     RUNTIME DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-    CONFIGURATIONS Release)
+    CONFIGURATIONS ${CMAKE_BUILD_TYPE})
 
   if (EXISTS "$ENV{QTDIR}/bin/Qt5Widgets.dll"
      AND EXISTS "$ENV{QTDIR}/bin/Qt5Core.dll" 
