--- a/qt_gui_app/CMakeLists.txt
+++ b/qt_gui_app/CMakeLists.txt
@@ -9,3 +9,6 @@ catkin_python_setup()
 install(PROGRAMS scripts/qt_gui_app
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+if(WIN32)
+ install_python_cli(qt_gui_app)
+endif()
